# anki-creator

./: .gitignore  CONFIG_GUIDE.md  Cargo.toml  DOCS.md  PROJECT_STRUCTURE.md  README.md  USAGE_GUIDE.md  config.example  example.sh
src/: analyzer.rs  api.rs  config.rs  database.rs  lib.rs  main.rs  models.rs  tts.rs
