[package]
name = "anki-creator"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
csv = "1.3"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
toml = "0.8"
